@@ -5,6 +5,8 @@ cupt (2.10.0~) UNRELEASED; urgency=low
       - Don't rebuild the cache when the last action required less cache
         parts than the current one, but all needed parts were loaded before.
       - Don't rebuild the cache if simulation is on.
+      - Replaced argument parsing algorithm from a shell invocation to a
+        simple word parser (simple one-level shell quotes still allowed).
   * lib:
     - config:
       - New option 'cupt::console::warnings::removal-of-essential'.
